# industrail_software

./: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  IDatabaseManager.h  README.md  SqlDatabaseManager.cpp  SqlDatabaseManager.h  collect.cpp  collect.h  collect.ui  customvideo.cpp  customvideo.h  dialog.ui  form.cpp  form.h  form.ui  global.cpp  global.h  label.cpp  label.h  label.ui  main.cpp  param_manager.cpp  param_manager.h  param_manager.ui  resource.qrc  serialcommunication.cpp  serialcommunication.h
manager/: annotation_manager.cpp  annotation_manager.h
tcp/: connectionworker.cpp  connectionworker.h  sendimage_task.cpp  sendimage_task.h  tcp_test.cpp  tcp_test.h  tcpconnectionpool.cpp  tcpconnectionpool.h
widgets/: Abstract.cpp  Abstract.h  CustomTabView.cpp  CustomTabView.h  customListwidget.cpp  customListwidget.h  customvideo.cpp  customvideo.h  detect_display.cpp  detect_display.h  detect_display.ui  extendedcombobox.cpp  extendedcombobox.h  mouldname_dialog.cpp  mouldname_dialog.h  mouldname_dialog.ui  scalablelabel.cpp  scalablelabel.h
